--- a/.github/workflows/fetch-latest-product.yml
+++ b/.github/workflows/fetch-latest-product.yml
@@ -10,15 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '20'
 
       - name: Install dependencies
-        run: npm install node-fetch
+        run: npm install node-fetch@2
 
       - name: Fetch latest product
         run: node fetch-latest-product.js
