--- a/.github/workflows/fetch-latest-product.yml
+++ b/.github/workflows/fetch-latest-product.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install node-fetch@2
+        run: npm install
 
       - name: Fetch latest product
         run: node fetch-latest-product.js
